--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -47,7 +47,7 @@ pipeline {
     stage('Continuous Deployment') {
       steps {
         sshagent(['ssh_key']) {
-          sh "ssh -o StrictHostKeyChecking=no -l ubuntu 44.215.220.137 'cd /home/ubuntu/ && wget https://raw.githubusercontent.com/therealabhishek/Chest_Cancer_Classification_CTScan_Jenkins_AWS/main/docker-compose.ymlA && export IMAGE_NAME=${ECR_REPOSITORY}:latest && aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com && docker compose up -d '"
+          sh "ssh -o StrictHostKeyChecking=no -l ubuntu 100.29.103.67 'cd /home/ubuntu/ && wget https://raw.githubusercontent.com/therealabhishek/Chest_Cancer_Classification_CTScan_Jenkins_AWS/main/docker-compose.yml && export IMAGE_NAME=${ECR_REPOSITORY}:latest && aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com && docker compose up -d '"
         }
       }
     }
